@@ -1,4 +1,4 @@
 module Cocard
   VERSION     = '0.8.4-dev'.freeze
-  RELEASEDATE = '2025-07-13'.freeze
+  RELEASEDATE = '2025-07-27'.freeze
 end
