@@ -230,7 +230,13 @@
 <div class="sect1">
 <h2 id="_0_8_4_unreleased"><a class="anchor" href="#_0_8_4_unreleased"></a>0.8.4 - unreleased</h2>
 <div class="sectionbody">
-
+<div class="ulist">
+<ul>
+<li>
+<p>Karte kopieren: existierende Karte kann als Vorlage bei Nachbestellungen verwendet werden.</p>
+</li>
+</ul>
+</div>
 </div>
 </div>
 <div class="sect1">
