@@ -2,6 +2,8 @@
 
 == 0.8.4 - unreleased
 
+* Karte kopieren: existierende Karte kann als Vorlage bei Nachbestellungen verwendet werden.
+
 == 0.8.3 - 2025-07-13
 
 * Konnektor: Buttons für Reboot und Connectivity-Check jetzt auch auf der Übersichtsseite der Konnektoren
